# smart-talk

./: .env-example  Makefile  README.md  main.py  pyproject.toml
templates/: item.html
